--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,7 @@ before_script:
         </whitelist>
     </filter>
     </phpunit>" > phpunit.xml
-  - echo "# for php-coveralls
-    src_dir: app
-    coverage_clover: build/logs/clover.xml
-    json_path: build/logs/coveralls-upload.json" > .coveralls.yml
+  - echo -e "# for php-coveralls\nsrc_dir: app\ncoverage_clover: build/logs/clover.xml\njson_path: build/logs/coveralls-upload.json" > .coveralls.yml
  
 script:
   - sh -c "if [ '$PHPCS' = '1' ]; then phpcs -p --extensions=php --standard=CakePHP --ignore=Plugin --ignore=Vendor --ignore=webroot/js/ckeditor -n ./app; elif [ "$COVERALLS" == 1 ]; then cd ./app; ../vendors/bin/cake test app AllTests --stderr --coverage-clover ../build/logs/clover.xml else cd ./app; ../vendors/bin/cake test app AllTests --stderr; fi"
