Fixed composer config for renamed package

--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,6 @@
 	},
 	"repositories" : [
 		{
-			"type": "pear",
-			"url": "http://pear.cakephp.org"
-		},
-		{
 			"type": "package",
 			"package": {
 				"name": "htmlawed/htmlawed",
@@ -48,8 +44,7 @@
 		}
 	},
 	"require" : {
-		"php": ">=5.2.8",
-		"pear-cakephp/cakephp": "2.4.9",
+		"cakephp/cakephp": "2.4.9",
 		"cakephp/debug_kit": "2.2.*",
 		"slywalker/twitter_bootstrap": "1.5.7",
 		"htmlawed/htmlawed": "1.1.14",
