--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,18 @@ language: php
 
 php:
   - 5.3
+  - 5.4
+  - 5.5
+  - 5.6
 
 env:
   - DB=mysql
 
 matrix:
+  allow_failures:
+    - php: 5.4
+    - php: 5.5
+    - php: 5.6
   include:
     - php: 5.3
       env:
