--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ before_script:
   - sh -c "composer global require 'phpunit/phpunit=3.7.33'"
   - sh -c "ln -s ~/.composer/vendor/phpunit/phpunit/PHPUnit ./app/Vendor/PHPUnit"
   - sudo apt-get install -y r-base r-cran-rserve
-  - sudo Rscript -e "install.packages(c('gplots'),,'http://cran.us.r-project.org')"
-  - sudo Rscript -e "install.packages(c('psy'),,'http://cran.us.r-project.org')"
+  - sudo Rscript -e "install.packages(c('gplots'),,'http://cran.rstudio.com')"
+  - sudo Rscript -e "install.packages(c('psy'),,'http://cran.rstudio.com')"
   - sh -c "mysql -e 'CREATE DATABASE qdnatool_test;'"
   - chmod -R 777 ./app/tmp
   - composer install --dev --no-interaction --prefer-source
