--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
   - sh -c "ln -s ~/.composer/vendor/phpunit/phpunit/PHPUnit ./app/Vendor/PHPUnit"
   - sudo sh -c "echo deb http://cran.rstudio.com/bin/linux/ubuntu precise/ >> /etc/apt/sources.list.d/rstudio.list"
   - sudo apt-get update -qq
-  - sudo apt-get install -y r-base r-cran-rserve
+  - sudo apt-get install -y --force-yes r-base r-cran-rserve
   - sudo Rscript -e "install.packages(c('gplots'),,'http://cran.rstudio.com')"
   - sudo Rscript -e "install.packages(c('psy'),,'http://cran.rstudio.com')"
   - sh -c "mysql -e 'CREATE DATABASE qdnatool_test;'"
