--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_script:
   - sudo apt-get install -y --force-yes r-base r-cran-rserve
   - sudo Rscript -e "install.packages(c('gplots'),,'http://cran.rstudio.com')"
   - sudo Rscript -e "install.packages(c('psy'),,'http://cran.rstudio.com')"
+  - sudo R CMD Rserve
   - sh -c "mysql -e 'CREATE DATABASE qdnatool_test;'"
   - chmod -R 777 ./app/tmp
   - composer install --dev --no-interaction --prefer-source
