--- a/composer.json
+++ b/composer.json
@@ -2,17 +2,17 @@
 	"minimum-stability": "dev",
 	"prefer-stable" : true,
 	"config" : {
-		"vendor-dir" : "app/Vendor/"
+		"vendor-dir" : "app/Vendor"
 	},
 	"repositories" : [
 		{
 			"type": "package",
 			"package": {
 				"name": "htmlawed/htmlawed",
-				"version": "1.1.14",
+				"version": "1.1.20",
 				"type": "cakephp-vendor",
 				"dist": {
-					"url": "http://www.bioinformatics.org/phplabware/downloads/htmLawed.zip",
+					"url": "http://www.bioinformatics.org/phplabware/downloads/htmLawed1120.zip",
 					"type": "zip"
 				},
 				"require": {
@@ -24,11 +24,16 @@
 			"type": "package",
 			"package": {
 				"name": "rserve-php/rserve-php",
-				"version": "0.2.41",
+				"version": "dev-master",
 				"type": "cakephp-vendor",
 				"dist": {
-					"url": "http://rserve-php.googlecode.com/files/rserve-php-0.2-rev41.zip",
-					"type": "zip"
+					"type": "zip",
+					"url": "https://github.com/cturbelin/rserve-php/archive/master.zip"
+				},
+				"source": {
+					"type": "git",
+					"url": "https://github.com/cturbelin/rserve-php",
+					"reference": "master"
 				},
 				"require": {
 					"composer/installers": "*"
@@ -46,8 +51,8 @@
 		"cakephp/cakephp": "2.7.*",
 		"cakephp/debug_kit": "2.2.*",
 		"slywalker/twitter_bootstrap": "1.5.7",
-		"htmlawed/htmlawed": "1.1.14",
-		"rserve-php/rserve-php": "0.2.41"
+		"htmlawed/htmlawed": "1.1.*",
+		"rserve-php/rserve-php": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
