--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,16 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
+  - hhvm
 
 env:
   - DB=mysql
 
 matrix:
   allow_failures:
-    - php: 5.6
+    - php: 7.0
+    - php: hhvm
   include:
     - php: 5.5
       env:
