--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: false
+
 language: php
 
 php:
@@ -23,15 +25,20 @@ matrix:
       env:
         - PHPCS=1
 
+addons:
+  apt:
+    sources:
+    - r-packages-precise
+    packages:
+    - r-base
+    - r-cran-rserve
+
 before_script:
   - sh -c "composer global require 'phpunit/phpunit=3.7.33'"
   - sh -c "ln -s ~/.composer/vendor/phpunit/phpunit/PHPUnit ./app/Vendor/PHPUnit"
-  - sudo sh -c "echo deb http://cran.rstudio.com/bin/linux/ubuntu precise/ >> /etc/apt/sources.list.d/rstudio.list"
-  - sudo apt-get update -qq
-  - sudo apt-get install -y --force-yes r-base r-cran-rserve
-  - sudo Rscript -e "install.packages(c('gplots'),,'http://cran.rstudio.com')"
-  - sudo Rscript -e "install.packages(c('psy'),,'http://cran.rstudio.com')"
-  - sudo R CMD Rserve
+  - Rscript -e "install.packages(c('gplots'),,'http://cran.rstudio.com')"
+  - Rscript -e "install.packages(c('psy'),,'http://cran.rstudio.com')"
+  - R CMD Rserve
   - sh -c "mysql -e 'CREATE DATABASE qdnatool_test;'"
   - chmod -R 777 ./app/tmp
   - composer install --dev --no-interaction --prefer-source
