--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,12 @@ addons:
     - r-cran-rserve
 
 install:
-  - Rscript -e "install.packages(c('gplots'),,'http://cran.rstudio.com')"
-  - Rscript -e "install.packages(c('psy'),,'http://cran.rstudio.com')"
+  - mkdir -p ~/Rlib
+  - echo 'R_LIBS=~/Rlib' > .Renviron
+  - echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
+  - echo '.travis.yml' > .Rbuildignore
+  - Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("gplots", dependencies = TRUE) }'
+  - Rscript -e 'if(!"psy" %in% rownames(installed.packages())) { install.packages("psy", dependencies = TRUE) }'  
   - R CMD Rserve
 
 before_script:
