--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ before_script:
   - sudo apt-get install -y --force-yes texlive-binaries
   - sudo apt-get install -y --force-yes r-base r-cran-rserve
   - sudo Rscript -e "install.packages(c('gplots'),,'http://cran.rstudio.com')"
+  - sudo Rscript -e "install.packages(c('ggplot2'),,'http://cran.rstudio.com')"
+  - sudo Rscript -e "install.packages(c('gridExtra'),,'http://cran.rstudio.com')"
   - sudo Rscript -e "install.packages(c('psy'),,'http://cran.rstudio.com')"
   - sudo R CMD Rserve
   - sh -c "mysql -e 'CREATE DATABASE qdnatool_test;'"
