--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ before_script:
   - sudo echo 'R_LIBS=~/Rlib' > .Renviron
   - sudo echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
   - sudo echo '.travis.yml' > .Rbuildignore
+  - sudo Rscript -e 'Sys.setenv(LINTR_COMMENT_BOT="FALSE");'
   - sudo Rscript -e 'if(!"devtools" %in% rownames(installed.packages())) { install.packages("devtools", dependencies = TRUE) }'
   - sudo Rscript -e 'if(!"covr" %in% rownames(installed.packages())) { install.packages("covr", dependencies = TRUE) }'
   - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("gplots", dependencies = TRUE) }'
