--- a/.travis.yml
+++ b/.travis.yml
@@ -44,9 +44,9 @@ before_script:
   - sudo apt-get install -y --force-yes libcurl4-gnutls-dev
   - sudo apt-get install -y --force-yes libxml2-dev
   - sudo mkdir -p ~/Rlib
-  - sudo echo 'R_LIBS=~/Rlib' > .Renviron
-  - sudo echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
-  - sudo echo '.travis.yml' > .Rbuildignore
+  - sudo echo 'R_LIBS=~/Rlib' > ~/.Renviron
+  - sudo echo 'options(repos = "http://cran.rstudio.com")' > ~/.Rprofile
+  - sudo echo '.travis.yml' > ~/.Rbuildignore
   - sudo Rscript -e 'Sys.setenv(LINTR_COMMENT_BOT="FALSE");'
   - sudo Rscript -e 'if(!"devtools" %in% rownames(installed.packages())) { install.packages("devtools", dependencies = TRUE) }'
   - sudo Rscript -e 'if(!"covr" %in% rownames(installed.packages())) { install.packages("covr", dependencies = TRUE) }'
