--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
 # cache local R libraries directory:
 cache:
   directories:
-    - ~root/Rlib
+    - /home/travis/Rlib
 
 before_script:
   - sh -c "composer global require 'phpunit/phpunit=3.7.33'"
@@ -43,10 +43,7 @@ before_script:
   - sudo apt-get install -y --force-yes r-base r-cran-rserve
   - sudo apt-get install -y --force-yes libcurl4-gnutls-dev
   - sudo apt-get install -y --force-yes libxml2-dev
-  - sudo mkdir -p ~/Rlib
-  - sudo echo 'R_LIBS=~/Rlib' > ~/.Renviron
   - sudo echo 'options(repos = "http://cran.rstudio.com")' > ~/.Rprofile
-  - sudo echo '.travis.yml' > ~/.Rbuildignore
   - sudo Rscript -e 'Sys.setenv(LINTR_COMMENT_BOT="FALSE");'
   - sudo Rscript -e 'if(!"devtools" %in% rownames(installed.packages())) { install.packages("devtools", dependencies = TRUE) }'
   - sudo Rscript -e 'if(!"covr" %in% rownames(installed.packages())) { install.packages("covr", dependencies = TRUE) }'
