--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
 
 env:
   - DB=mysql
+  - LINTR_COMMENT_BOT=false
 
 matrix:
   allow_failures:
@@ -44,7 +45,6 @@ before_script:
   - sudo apt-get install -y --force-yes libcurl4-gnutls-dev
   - sudo apt-get install -y --force-yes libxml2-dev
   - sudo echo 'options(repos = "http://cran.rstudio.com")' > ~/.Rprofile
-  - sudo Rscript -e 'Sys.setenv(LINTR_COMMENT_BOT="FALSE");'
   - sudo Rscript -e 'if(!"devtools" %in% rownames(installed.packages())) { install.packages("devtools", dependencies = TRUE) }'
   - sudo Rscript -e 'if(!"covr" %in% rownames(installed.packages())) { install.packages("covr", dependencies = TRUE) }'
   - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("gplots", dependencies = TRUE) }'
