--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
 
 env:
   - DB=mysql
+    R_LIB_USER=$HOME/R/Library
 
 matrix:
   allow_failures:
@@ -32,7 +33,7 @@ matrix:
 
 cache:
   directories:
-    - $HOME/Rlib
+    - $HOME/R/Library
 
 before_script:
   - sh -c "composer global require 'phpunit/phpunit=3.7.33'"
@@ -44,8 +45,6 @@ before_script:
   - sudo apt-get install -y --force-yes r-base r-cran-rserve
   - sudo apt-get install -y --force-yes libcurl4-gnutls-dev
   - sudo apt-get install -y --force-yes libxml2-dev
-  - sudo mkdir -p ~/Rlib
-  - sudo echo 'R_LIBS=~/Rlib' > ~/.Renviron
   - sudo echo 'options(repos = "http://cran.rstudio.com")' > ~/.Rprofile
   - sudo Rscript -e 'if(!"devtools" %in% rownames(installed.packages())) { install.packages("devtools", dependencies = TRUE) }'
   - sudo Rscript -e 'if(!"covr" %in% rownames(installed.packages())) { install.packages("covr", dependencies = TRUE) }'
