--- a/.travis.yml
+++ b/.travis.yml
@@ -40,10 +40,8 @@ before_script:
   - sudo apt-get install -y --force-yes r-base r-cran-rserve
   - sudo apt-get install -y --force-yes libcurl4-gnutls-dev
   - sudo apt-get install -y --force-yes libxml2-dev
-  - sudo apt-get install -y --force-yes ghc
-  - sudo apt-get install -y --force-yes cabal-install
-  - sudo cabal update
-  - sudo cabal install pandoc
+    wget https://github.com/jgm/pandoc/releases/download/1.17.2/pandoc-1.17.2-1-amd64.deb
+  - sudo dpkg -i pandoc-1.17.2-1-amd64.deb
   - sudo mkdir -p ~/R/Library
   - sudo echo 'R_LIBS=~/R/Library' > ~/.Renviron
   - sudo echo 'options(repos = "http://cran.rstudio.com")' > ~/.Rprofile
