--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,8 @@
 		"nlware/rserve-php": "dev-master"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "3.7.*"
+		"phpunit/phpunit": "3.7.*",
+		"cakephp/cakephp-codesniffer": "1.*",
+		"satooshi/php-coveralls": "dev-master"
 	}
 }
