--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: required
-dist: precise
+dist: trusty
 
 language: php
 
@@ -36,7 +36,7 @@ cache:
 before_script:
   - sh -c "composer global require 'phpunit/phpunit=3.7.33'"
   - sh -c "ln -s ~/.composer/vendor/phpunit/phpunit/PHPUnit ./app/Vendor/PHPUnit"
-  - sudo sh -c "echo deb http://cran.rstudio.com/bin/linux/ubuntu precise/ >> /etc/apt/sources.list.d/rstudio.list"
+  - sudo sh -c "echo deb https://cran.rstudio.com/bin/linux/ubuntu trusty/ >> /etc/apt/sources.list.d/rstudio.list"
   - sudo apt-get update -qq
   # workaround for missing dependency in r-base which causes the following error: /var/lib/dpkg/info/r-base-core.postinst: 57: /var/lib/dpkg/info/r-base-core.postinst: mktexlsr: not found
   - sudo apt-get install -y --force-yes texlive-binaries
@@ -45,7 +45,7 @@ before_script:
   - sudo apt-get install -y --force-yes libxml2-dev
   - sudo mkdir -p ~/R/Library
   - sudo echo 'R_LIBS=~/R/Library' > ~/.Renviron
-  - sudo echo 'options(repos = "http://cran.rstudio.com")' > ~/.Rprofile
+  - sudo echo 'options(repos = "https://cran.rstudio.com")' > ~/.Rprofile
   - sudo Rscript -e 'if(!"devtools" %in% rownames(installed.packages())) { install.packages("devtools", dependencies = TRUE) }'
   - sudo Rscript -e 'if(!"covr" %in% rownames(installed.packages())) { install.packages("covr", dependencies = TRUE) }'
   - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("gplots", dependencies = TRUE) }'
