--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,11 @@ before_script:
   - sudo Rscript -e 'if(!"gridExtra" %in% rownames(installed.packages())) { install.packages("gridExtra", dependencies = TRUE) }'
   - sudo Rscript -e 'if(!"psy" %in% rownames(installed.packages())) { install.packages("psy", dependencies = TRUE) }'
   - sudo Rscript -e 'update.packages(ask = FALSE, instlib = "~/R/Library")'
-  - sudo R CMD /usr/lib/R/bin/Rserve
+  - sh -c "rm /usr/lib/R/bin/Rserve"
+  - sh -c "rm /usr/lib/R/bin/Rserve.dbg"
+  - sh -c "ln -s /usr/lib/R/site-library/Rserve/libs/Rserv /usr/lib/R/bin/Rserve"
+  - sh -c "ln -s /usr/lib/R/site-library/Rserve/libs/Rserv.dbg /usr/lib/R/bin/Rserve.dbg"
+  - sudo R CMD Rserve
   - sh -c "mysql -e 'CREATE DATABASE qdnatool_test;'"
   - chmod -R 777 ./app/tmp
   - composer install --dev --no-interaction --prefer-source
