--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
 		"nlware/rserve-php": "dev-master"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "3.7.*",
+		"phpunit/phpunit": "^3.7",
 		"cakephp/cakephp-codesniffer": "1.*",
 		"satooshi/php-coveralls": "v1.0.1"
 	}
